<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anibalosorio.myapplication_2.MainActivity_2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:textColor="@color/darkcyan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/comentario1"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/num1"
            android:hint="@string/numero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:ems="10"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/num2"
            android:hint="@string/numero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:ems="10"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/comentario2"
        android:padding="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rsuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rresta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rmulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rdivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/Bcal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Calcular."
        android:textSize="20dp"
        android:textColor="@color/black"
        android:background="@color/royalblue"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/total"
        android:shadowColor="@color/black"
        android:shadowRadius="11"
        android:shadowDy="11"
        android:shadowDx="11"/>

</LinearLayout>
